--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     },
     "devDependencies": {
         "@angular/cli": "7.2.3",
-        "@angular/compiler-cli": "7.2.2",
+        "@angular/compiler-cli": "^7.2.5",
         "@ngtools/webpack": "7.2.3",
         "@types/jest": "23.3.13",
         "@types/node": "10.12.18",
@@ -56,13 +56,14 @@
         "html-webpack-plugin": "3.2.0",
         "husky": "1.3.1",
         "jest": "23.6.0",
-        "jest-junit": "6.1.0",
+        "jest-junit": "^6.3.0",
         "jest-preset-angular": "6.0.2",
         "jest-sonar-reporter": "2.0.0",
         "lint-staged": "8.1.0",
         "mini-css-extract-plugin": "0.5.0",
         "moment-locales-webpack-plugin": "1.0.7",
         "optimize-css-assets-webpack-plugin": "5.0.1",
+        "postcss-loader": "3.0.0",
         "prettier": "1.16.1",
         "reflect-metadata": "0.1.13",
         "rimraf": "2.6.3",
@@ -76,8 +77,6 @@
         "tslint-config-prettier": "1.17.0",
         "tslint-loader": "3.6.0",
         "typescript": "3.2.2",
-        "postcss-loader": "3.0.0",
-        "xml2js": "0.4.19",
         "webpack": "4.29.0",
         "webpack-cli": "3.2.1",
         "webpack-dev-server": "3.1.14",
@@ -85,7 +84,8 @@
         "webpack-notifier": "1.7.0",
         "webpack-visualizer-plugin": "0.1.11",
         "workbox-webpack-plugin": "3.6.3",
-        "write-file-webpack-plugin": "4.5.0"
+        "write-file-webpack-plugin": "4.5.0",
+        "xml2js": "0.4.19"
     },
     "engines": {
         "node": ">=8.9.0"
